deploy/apex/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
        - frontend.apex-hosted.cloud
      secretName: apex-frontend-cert
  rules:
    - host: frontend.apex-hosted.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
